k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: flask-notes-app
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        imagePullPolicy: Always
        ports:
          - containerPort: 3306
        readinessProbe:
          exec:
            command: ["mysqladmin","ping","-h","127.0.0.1"]
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-csi      # ← обязательно, иначе PVC Pending
        resources:
          requests:
            storage: 5Gi
