k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-notes
  namespace: flask-notes-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-notes
