k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: flask-notes-app
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
