k8s/nfs-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: flask-notes-app
spec:
  selector:
    app: nfs-server
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: flask-notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: itsthenetwork/nfs-server-alpine:latest
        ports:
        - name: nfs
          containerPort: 2049
        - name: mountd
          containerPort: 20048
        - name: rpcbind
          containerPort: 111
        securityContext:
          privileged: true       # обязательно для NFS в k8s :contentReference[oaicite:2]{index=2}
        volumeMounts:
        - name: nfs-data
          mountPath: /exports
      volumes:
        - name: nfs-data
          hostPath:
            path: /nfs-vol       # каталог на каждой ноде
            type: DirectoryOrCreate  # создаст, если нет :contentReference[oaicite:2]{index=2}
