k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-notes-ingress
  namespace: flask-notes-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - note.mikop.su
    secretName: flask-notes-tls
  rules:
  - host: note.mikop.su
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-notes
            port:
              number: 80
